tests/reference/asr-test_assign8-4b26e63.stderr
semantic error: readonly attribute
 --> tests/errors/test_assign8.py:6:5
  |
6 |     c.real = 5.0
  |     ^^^^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
